# MLPragueImitation

./: Dockerfile  MLPrague_Imitation.ipynb  README.md  backend.py  frontend.html  pyproject.toml
agents/: README.md
recordings/: README.md
src/imitation_workshop/envs/: __init__.py  custom_car_racing.py
src/imitation_workshop/iqlearn/: __init__.py  iqlearn.py
